--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Garden Defense</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#7ec850; margin:0; text-align:center; }
-    h1 { margin:10px; }
-    #ui { display:flex; justify-content:center; gap:10px; margin-bottom:10px; }
-    button { padding:8px 12px; font-size:14px; cursor:pointer; }
-    #energy { font-weight:bold; font-size:18px; }
-    #game { display:grid; grid-template-rows:repeat(5,80px); grid-template-columns:repeat(9,80px); gap:2px; justify-content:center; margin:auto; background:#4a8f3a; padding:5px; }
-    .cell { background:#9be27d; border:1px solid #3b6b2a; position:relative; }
-    .plant { width:100%; height:100%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:12px; border-radius:10px; }
-    .shooter { background:#4caf50; }
-    .wall { background:#8d6e63; }
-    .sun { background:#ffeb3b; }
-    .enemy { position:absolute; width:40px; height:40px; background:#9e9e9e; border-radius:50%; top:20px; left:700px; }
-    .bullet { position:absolute; width:10px; height:5px; background:black; top:35px; left:40px; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Garden Defense</title>
+<style>
+body{font-family:Arial;background:#7ec850;margin:0;text-align:center}
+h1{margin:10px}
+#ui{display:flex;justify-content:center;gap:10px;margin-bottom:10px}
+button{padding:8px 12px;font-size:14px;cursor:pointer}
+#energy{font-weight:bold;font-size:18px}
+#game{position:relative;display:grid;grid-template-rows:repeat(5,80px);grid-template-columns:repeat(9,80px);gap:2px;justify-content:center;margin:auto;background:#4a8f3a;padding:5px}
+.cell{background:#9be27d;border:1px solid #3b6b2a;position:relative}
+.plant{width:100%;height:100%;display:flex;align-items:center;justify-content:center;font-weight:bold;font-size:12px;border-radius:10px}
+.shooter{background:#4caf50}
+.wall{background:#8d6e63}
+.sun{background:#ffeb3b}
+.enemy{position:absolute;width:40px;height:40px;background:#9e9e9e;border-radius:6px}
+.bullet{position:absolute;width:12px;height:6px;background:black;border-radius:3px}
+</style>
 </head>
 <body>
 <h1>🌱 Garden Defense</h1>
 <div id="ui">
-  <div id="energy">Energia: 50</div>
-  <button onclick="selectPlant('shooter')">Atirador (25)</button>
-  <button onclick="selectPlant('wall')">Defensor (20)</button>
-  <button onclick="selectPlant('sun')">Gerador (15)</button>
+<div id="energy">Energia: 50</div>
+<button onclick="selectPlant('shooter')">Atirador (25)</button>
+<button onclick="selectPlant('wall')">Defensor (20)</button>
+<button onclick="selectPlant('sun')">Gerador (15)</button>
 </div>
 <div id="game"></div>
 <script>
@@ -34,59 +34,65 @@ const rows=5, cols=9;
 const game=document.getElementById('game');
 const energyEl=document.getElementById('energy');
 let energy=50, selectedPlant=null;
-let grid=[]; let enemies=[];
-function updateEnergy(){energyEl.innerText='Energia: '+energy;}
-function selectPlant(t){selectedPlant=t;}
-function cost(t){return t==='shooter'?25:t==='wall'?20:15;}
+let grid=[], enemies=[];
+function updateEnergy(){energyEl.innerText='Energia: '+energy}
+function selectPlant(t){selectedPlant=t}
+function cost(t){return t==='shooter'?25:t==='wall'?20:15}
 function createGrid(){
-  for(let r=0;r<rows;r++){ grid[r]=[];
-    for(let c=0;c<cols;c++){
-      const cell=document.createElement('div'); cell.className='cell';
-      cell.onclick=()=>placePlant(r,c,cell);
-      game.appendChild(cell);
-      grid[r][c]={plant:null,cell,shootInterval:null};
-    }
+ for(let r=0;r<rows;r++){grid[r]=[];
+  for(let c=0;c<cols;c++){
+   const cell=document.createElement('div');cell.className='cell';
+   cell.onclick=()=>placePlant(r,c,cell);
+   game.appendChild(cell);
+   grid[r][c]={plant:null,cell,interval:null};
   }
+ }
 }
 function placePlant(r,c,cell){
-  if(!selectedPlant||grid[r][c].plant||energy<cost(selectedPlant))return;
-  energy-=cost(selectedPlant); updateEnergy();
-  const plant=document.createElement('div');
-  plant.className='plant '+selectedPlant; plant.innerText=selectedPlant;
-  cell.appendChild(plant); grid[r][c].plant=selectedPlant;
-  if(selectedPlant==='sun'){
-    setInterval(()=>{energy+=5;updateEnergy();},5000);
-  }
-  if(selectedPlant==='shooter'){
-    grid[r][c].shootInterval=setInterval(()=>shoot(r,cell),1500);
-  }
+ if(!selectedPlant||grid[r][c].plant||energy<cost(selectedPlant))return;
+ energy-=cost(selectedPlant);updateEnergy();
+ const plant=document.createElement('div');
+ plant.className='plant '+selectedPlant;plant.innerText=selectedPlant;
+ cell.appendChild(plant);grid[r][c].plant=selectedPlant;
+ if(selectedPlant==='sun'){
+  setInterval(()=>{energy+=5;updateEnergy()},5000)
+ }
+ if(selectedPlant==='shooter'){
+  grid[r][c].interval=setInterval(()=>shoot(r,cell),1200)
+ }
 }
 function shoot(row,cell){
-  const bullet=document.createElement('div'); bullet.className='bullet';
-  bullet.style.top=cell.offsetTop+35+'px'; game.appendChild(bullet);
-  let x=cell.offsetLeft+40;
-  const move=setInterval(()=>{
-    x+=5; bullet.style.left=x+'px';
-    enemies.forEach((e,i)=>{
-      if(e.row===row && x>e.x && x<e.x+40){
-        e.life-=10; bullet.remove(); clearInterval(move);
-        if(e.life<=0){ e.el.remove(); enemies.splice(i,1); }
-      }
-    });
-    if(x>800){ bullet.remove(); clearInterval(move); }
-  },30);
+ const bullet=document.createElement('div');bullet.className='bullet';
+ const startX=cell.offsetLeft+cell.offsetWidth;
+ const startY=cell.offsetTop+cell.offsetHeight/2-3;
+ bullet.style.left=startX+'px';
+ bullet.style.top=startY+'px';
+ game.appendChild(bullet);
+ let x=startX;
+ const move=setInterval(()=>{
+  x+=6; bullet.style.left=x+'px';
+  enemies.forEach((e,i)=>{
+   if(e.row===row && x+12>e.x && x<e.x+40){
+    e.life-=10; bullet.remove(); clearInterval(move);
+    if(e.life<=0){e.el.remove();enemies.splice(i,1)}
+   }
+  })
+  if(x>game.offsetWidth){bullet.remove();clearInterval(move)}
+ },30)
 }
 function spawnEnemy(){
-  const row=Math.floor(Math.random()*rows);
-  const enemy=document.createElement('div'); enemy.className='enemy';
-  enemy.style.top=row*82+25+'px'; game.appendChild(enemy);
-  let enemyObj={el:enemy,row,life:30,x:800}; enemies.push(enemyObj);
-  const walk=setInterval(()=>{
-    enemyObj.x-=1; enemy.style.left=enemyObj.x+'px';
-    if(enemyObj.x<=0){ alert('Game Over'); location.reload(); }
-  },40);
+ const row=Math.floor(Math.random()*rows);
+ const enemy=document.createElement('div');enemy.className='enemy';
+ enemy.style.top=row*82+25+'px';game.appendChild(enemy);
+ let enemyObj={el:enemy,row,life:40,x:game.offsetWidth-40};
+ enemy.style.left=enemyObj.x+'px';
+ enemies.push(enemyObj);
+ const walk=setInterval(()=>{
+  enemyObj.x-=1;enemy.style.left=enemyObj.x+'px';
+  if(enemyObj.x<=0){alert('Game Over');location.reload()}
+ },40)
 }
-createGrid(); updateEnergy(); setInterval(spawnEnemy,4000);
+createGrid();updateEnergy();setInterval(spawnEnemy,4000)
 </script>
 </body>
 </html>
